[gd_scene load_steps=7 format=3 uid="uid://c8k2x5v3n1m6"]

[ext_resource type="Script" uid="uid://bwsbjy8or2skn" path="res://Scripts/Player/Player.gd" id="1"]

[sub_resource type="CapsuleShape3D" id="1"]

[sub_resource type="CapsuleMesh" id="2"]

[sub_resource type="StandardMaterial3D" id="3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
metallic = 0.5
roughness = 0.6
emission_enabled = true
emission = Color(0.3, 0.1, 0.1, 1)

[sub_resource type="BoxMesh" id="4"]
size = Vector3(0.1, 0.1, 0.8)

[sub_resource type="StandardMaterial3D" id="5"]
albedo_color = Color(0.7, 0.7, 0.8, 1)
metallic = 0.8
roughness = 0.3

[node name="Player" type="CharacterBody3D"]
collision_mask = 4
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("1")

[node name="Body" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("2")
surface_material_override/0 = SubResource("3")

[node name="Weapon" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0.3)

[node name="Sword" type="MeshInstance3D" parent="Body/Weapon"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("4")
surface_material_override/0 = SubResource("5")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1.6, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 220.0
offset_bottom = -40.0
grow_vertical = 0
value = 100.0
show_percentage = false

[node name="ManaBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -30.0
offset_right = 220.0
offset_bottom = -10.0
grow_vertical = 0
value = 100.0
show_percentage = false
